small updates to week 6 assignments

--- a/Random_Word/apps/word/templates/word/index.html
+++ b/Random_Word/apps/word/templates/word/index.html
@@ -7,7 +7,7 @@
     <title>Random Word Generator</title>
 </head>
 <body>
-    <h3>Randon Work(attempt #{{ request.session.tries }})</h3>
+    <h3>Randon Word(attempt #{{ request.session.tries }})</h3>
     <h1>{{ request.session.word }}</h1>
     <a href="/generate"><button>Generate</button></a>
     <a href="/reset"><button>Reset</button></a>
